kidzbop.com (archived on 2007-12-30)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "entertainment",
  "char_count": 6363,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.62,
  "homepage_snapshot_redirected_domain": "kidzbop.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20070930192001id_/http://www.kidzbop.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20070930192001id_/http%3A//kidzbop.com",
  "interval": "2007_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "kidzbop.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071230213838id_/http%3A//www.kidzbop.com/home/privacy",
  "policy_title": "Kidz Bop",
  "policy_url": "kidzbop.com/home/privacy",
  "sha1": "f5b81342455573a259dba73ed4ec1f7cfc23c9db",
  "simhash": 6638814954776711380,
  "simhash_updated": false,
  "site_hostname": "kidzbop.com",
  "site_url": "http://kidzbop.com",
  "smog": 15.69,
  "strict_updated": true,
  "timestamp": "20071230213838",
  "word_count": 1027,
  "year": 2007
}

--- a/k/ki/kid/kidzbop.com.html
+++ b/k/ki/kid/kidzbop.com.html
@@ -1,47 +1,100 @@
-<!--The following is the downloaded HTML source of the kidzbop.com privacy policy that was archived on 2007-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070602174403id_/http%3A//www.kidzbop.com/home/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the kidzbop.com privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230213838id_/http%3A//www.kidzbop.com/home/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
  <title>Kidz Bop</title>
  <meta http-equiv="Content-type" content="text/html; charset=utf-8">
  <meta name="Description" content="Kidz Bop">
  <meta name="Keywords" content="Kidz Bop">
- <link href="/stylesheets/main.css?1179773400" media="screen" rel="Stylesheet" type="text/css"> <script src="/javascripts/application.js?1179773400" type="text/javascript"></script>
- <script src="/javascripts/prototype.js?1165400934" type="text/javascript"></script>
- <script src="/javascripts/prototype.js?1165400934" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1165400934" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1165400934" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1165400934" type="text/javascript"></script>
-<script src="/javascripts/application.js?1179773400" type="text/javascript"></script>
- <script src="/javascripts/swfobject.js?1171031681" type="text/javascript"></script>
- <script src="/javascripts/scroll.js?1176484111" type="text/javascript"></script>
+
+ <link href="/stylesheets/home_page_63907.css" media="screen" rel="Stylesheet" type="text/css"> 
+ <script src="/javascripts/base_63924.js" type="text/javascript"></script>
+
+<style type="text/css">
+ html{background: url(/images/html_bg.jpg) repeat scroll 0%;}
+</style>
+<style type="text/css">
+
+   
+
+</style>
 </head>
 
+
 <body class="page-home">
+ <ul id="nav">
+  <li class="sub music"><a href="/music" id="ir-nav-music" title="music">music</a>   <ul>
+    <li><a href="/music" id="ir-nav-music-browse_all" title="browse all">browse all</a></li>
+    <li><a href="/cd_albums?category=6" id="ir-nav-music-collections" title="collections">collections</a></li>
+    <li><a href="/cd_albums?category=8" id="ir-nav-music-special" title="special">special</a></li>
+    <li><a href="/cd_albums?category=7" id="ir-nav-music-digital_only" title="digital only">digital only</a></li>
+   </ul>
+  </li>
+  <li class="sub video"><a href="/video" id="ir-nav-video" title="video">video</a>   <ul>
+    <li><a href="/video/browse_all" id="ir-nav-video-browse_all" title="browse all">browse all</a></li>
+    <li><a href="/video/browse?order_by=popularity" id="ir-nav-video-most_popular" title="all time most popular">all time most popular</a></li>
+    <li><a href="/video/browse?order_by=created_at+desc" id="ir-nav-video-newest" title="newest">newest</a></li>
+    <li><a href="/video/browse?category_id=34" id="ir-nav-video-original_series" title="original series">original series</a></li>
+    <li><a href="/video/browse?category_id=12" id="ir-nav-video-music" title="music">music</a></li>
+    <li><a href="/video/browse?category_id=13" id="ir-nav-video-dance" title="dance">dance</a></li>
+    <li><a href="/video/browse?category_id=14" id="ir-nav-video-performance" title="performance">performance</a></li>
+    <li><a href="/video/browse?category_id=26" id="ir-nav-video-singing" title="singing">singing</a></li>
+    <li><a href="/video/browse?category_id=20" id="ir-nav-video-holiday" title="holiday">holiday</a></li>
+   </ul>
+  </li>
+        <li class="sub my_kbw"><a href="/kids_world/home" id="ir-nav-my_kbw" title="my kidzbop world">my kidzbop world</a>	  <ul>
+	    <li><a href="/kids_world/home" id="ir-nav-my_kbw-home" title="home">home</a></li>
+	    <li><a href="/poll" id="ir-nav-my_kbw-hollas_back" title="holla's back poll">holla's back poll</a></li>
+	  </ul>
+	</li>
+        <li class="sub fun"><a href="/fun" id="ir-nav-fun" title="fun &amp; games">fun &amp; games</a>	 <ul>
+                <li><a href="/game" id="ir-nav-fun-games" title="games">games</a></li>
+                <li><a href="/creativity" id="ir-nav-fun-creativity" title="creativity">creativity</a></li>
+                <li><a href="/printable" id="ir-nav-fun-printables" title="printables">printables</a></li>
+                <li><a href="/sendable" id="ir-nav-fun-sendables" title="sendables">sendables</a></li>
+                <li><a href="/home/sweepstakes" id="ir-nav-fun-sweepstakes" title="sweepstakes">sweepstakes</a></li>
+	 </ul>
+	</li>
+	<li class="sub tour"><a href="/bridge?dest_url=http%3A%2F%2Fwww.kidzbopworldtour.com%2Ftourdates.asp" id="ir-nav-tour" title="tour">tour</a>	 <ul>
+          <li><a href="/bridge?dest_url=http%3A%2F%2Fwww.kidzbopworldtour.com" id="ir-nav-tour-home" title="tour home">tour home</a></li>
+          <li><a href="/bridge?dest_url=http%3A%2F%2Fwww.kidzbopworldtour.com%2Ftourdates.asp" id="ir-nav-tour-dates" title="tour dates">tour dates</a></li>
+          <li><a id="ir-nav-tour-coupon" href="http://www.kidzbop.com/printable/show/191" title="coupon">coupon</a></li>
+	 </ul>
+	</li>
+	<li class="sub contest"><a href="/contest" id="ir-nav-contest" title="contest">contest</a>	 <ul>
+              <li><a href="/contest" id="ir-nav-contest-home" title="contest home">contest home</a></li>
+              <li><a href="/contest/rules" id="ir-nav-contest-official_rules" title="official rules">official rules</a></li>
+              <li><a href="/contest/browse" id="ir-nav-contest-see_all_entries" title="see all entries">see all entries</a></li>
+	 </ul>
+	</li>
+        <li><a href="/bridge?dest_url=http%3A%2F%2Fwww.musicspacekids.com%2Freferral.asp%3Ftracking_id%3Dkblaunchstore%2526type%3DG%2526product%3DKidz%2BBop%2526partner_id%3Dkblaunchstore" id="ir-nav-store" title="store">store</a></li>
+	<li><a href="/home/parents" id="ir-nav-parents" title="parents">parents</a></li>
+ </ul>
 
 
 <div id="playing" style="display: none;"></div>
 <div id="wrapper">
- <div id="header">
+
+  <div id="header">
    <h1><a href="/" title="Kidz Bop"><span>Kidz Bop</span></a></h1>
-   <ul id="header-nav">
-    <li class="music"><a href="/music" title="music"><span>music</span><span class="h">&nbsp;</span></a></li>
-    <li class="video"><a href="/video" title="video"><span>video</span><span class="h">&nbsp;</span></a></li>
-    <li class="mykbw"><a href="/kids_world/home" title="my KBW"><span>my KBW</span><span class="h">&nbsp;</span></a>   </li>
-    <li class="fungames"><a href="/fun" title="fun &amp;amp; games"><span>fun &amp; games</span><span class="h">&nbsp;</span></a></li>
-    <li class="contest"><a href="/contest" title="contest"><span>contest</span><span class="h">&nbsp;</span></a></li>
-    <li class="store"><a href="/bridge?dest_url=http://www.musicspacekids.com/referral.asp?tracking_id=kblaunchstore%26type=G%26product=Kidz+Bop" title="store"><span>store</span><span class="h">&nbsp;</span></a></li>
-   </ul>
-   </div> 
-
-<ul id="header-nav2">
-     <li class="login"><a href="#" onclick="detectBrowserTypeLogin();"><span>login</span></a></li>
-     <li class="signup"><a href="#" onclick="detectBrowserTypeSignup();"><span>sign up</span> </a></li>
-   </ul>
+ </div>
 
 
-  <div id="scroll" class=""></div>
+  <ul id="header-nav2">
+       <li class="login"><a href="#" onclick="detectBrowserTypeLogin();"><span>login</span></a></li>
+    <li class="signup"><a href="#" onclick="detectBrowserTypeSignup();"><span>sign up</span> </a></li>
+     </ul>
 
+  
+    <div id="scroll" class=""></div>
+  
+
+
+<form action="/search/search_results" id="searchform" method="post"> <fieldset>
+ <label for="f-search"><img src="/images/top_search_label.gif" alt="search"></label>
+<input id="f-search" name="query" type="text"> <input class="image" type="image" src="/images/top_search_submit.gif" alt="submit">
+ </fieldset>
+</form>
 
  
   <div id="main-top">
@@ -89,24 +142,21 @@
 <div class="inner">
  <h2><img src="/images/right_check_this_out.gif" alt="check this out"></h2>
  <ul>
-   <li><!-- start promo_small -->   
-      <a href="/video/browse?category_id=15"><img src="/uploads/small_promo_banner/115/funniest_promo.jpg" alt="/uploads/small_promo_banner/115/funniest_promo.jpg" height="66" width="120"><br><span>Need a good laugh?</span></a>
+   <li>   
+      <a href="/contest/minisite"><img src="/uploads/small_promo_banner/293/LTMDY_contes2t_120x60.png" alt="/uploads/small_promo_banner/293/LTMDY_contes2t_120x60.png" height="66" width="120"><br><span>Dont miss out on this all new contest!</span></a>
    
 
-
-<!-- end promo_small --></li>
-   <li><!-- start promo_small -->   
-      <a href="/cd_album/show/55"><img src="/uploads/small_promo_banner/74/auto_banner.thumb.jpg" alt="/uploads/small_promo_banner/74/auto_banner.thumb.jpg" height="66" width="120"><br><span>KIDZ BOP Sports Jamz</span></a>
+</li>
+   <li>   
+      <a href="/home/sweepstakes"><img src="/uploads/small_promo_banner/317/xmas-sweepstakes_120x60 copy.png" alt="/uploads/small_promo_banner/317/xmas-sweepstakes_120x60 copy.png" height="66" width="120"><br><span>Enter for a chance to win!</span></a>
    
 
-
-<!-- end promo_small --></li>
-   <li><!-- start promo_small -->   
-      <a href="/game/show/40"><img src="/uploads/small_promo_banner/29/auto_banner.thumb.jpg" alt="/uploads/small_promo_banner/29/auto_banner.thumb.jpg" height="66" width="120"><br><span>Play Tetrix</span></a>
+</li>
+   <li>   
+      <a href="/printable/show/191"><img src="/uploads/small_promo_banner/288/auto_banner.thumb.jpg" alt="/uploads/small_promo_banner/288/auto_banner.thumb.jpg" height="66" width="120"><br><span>A world tour discount just for YOU!</span></a>
    
 
-
-<!-- end promo_small --></li>
+</li>
  </ul>
   </div>
   <div class="b"></div>
@@ -115,17 +165,11 @@
 
   
  <div id="bottom" class="bottom_2">
-    <div class="ad"><!-- BEGIN RICH-MEDIA BURST! CODE -->
-<script language="JavaScript">
-rnum=Math.round(Math.random() * 100000);
-document.write('<scr'+'ipt src="http://ads.addesktop.com/cgi-bin/ads/ad12484k.cgi/v=2.0D/sz=300X250A/kw=NULL/'+rnum+'/RETURN-CODE/JS/"></scr'+'ipt>');
-</script><script src="http://ads.addesktop.com/cgi-bin/ads/ad12484k.cgi/v=2.0D/sz=300X250A/kw=NULL/7055/RETURN-CODE/JS/"></script>
-<noscript><a href="http://ads.addesktop.com/ads/ad12484k-map.cgi/ns/v=2.0D/sz=300X250A/kw=NULL/" target="_top">
-<img src="http://ads.addesktop.com/cgi-bin/ads/ad12484k.cgi/ns/v=2.0D/sz=300X250A/kw=NULL/" border="0" alt="Click Here"></a>
-</noscript>
-<!-- END BURST CODE --></div>
+    <div class="ad"><a href="/bridge?dest_url=http%3A%2F%2Fwww.kidzbopworldtour.com%2Ftourdates.asp"><img src="/images/page_home/kidzbop_world_tour.jpg" alt=""></a></div>
  </div>
   
+
+
 
  <div id="footer">
   <hr class="hide">
@@ -134,7 +178,8 @@ document.write('<scr'+'ipt src="http://ads.addesktop.com/cgi-bin/ads/ad12484k.cg
   <li class="privacy"><a href="/home/privacy" title="Privacy Policy"><span>Privacy Policy</span></a></li>
   <li class="help"><a href="/home/help" title="Help"><span>Help</span></a></li>
   <li class="parent"><a href="/home/parents" title="Parents"><span>Parents</span></a></li>
-  <li class="store"><a href="/bridge?dest_url=http://www.musicspacekids.com/referral.asp?tracking_id=kblaunchstore%26type=G%26product=Kidz+Bop" title="Store"><span>Store</span></a></li>
+  <li class="store"><a href="/bridge?dest_url=http://www.musicspacekids.com/referral.asp?tracking_id=kblaunchstore%26type=G%26product=Kidz+Bop%26partner_id=kblaunchstore" title="Store"><span>Store</span></a></li>
+  <li class="advertise_with_us"><a href="/home/advertise_with_us"><span>Advertise with us</span></a></li>
   </ul>
   <address><span>Copyright ©2006-2007 KIDZ BOP, L.L.C. All rights reserved.<br>All Trademarks and registered trademarks are property of their respective owners.</span></address>
  </div>
@@ -143,14 +188,14 @@ document.write('<scr'+'ipt src="http://ads.addesktop.com/cgi-bin/ads/ad12484k.cg
 <script language="JavaScript">
 rnum=Math.round(Math.random() * 100000);
 document.write('<scr'+'ipt src="http://ads.addesktop.com/cgi-bin/ads/ad12484k.cgi/v=2.0D/sz=728X90A/kw=KEYWORD/'+rnum+'/RETURN-CODE/JS/"></scr'+'ipt>');
-</script><script src="http://ads.addesktop.com/cgi-bin/ads/ad12484k.cgi/v=2.0D/sz=728X90A/kw=KEYWORD/57908/RETURN-CODE/JS/"></script>
+</script><script src="http://ads.addesktop.com/cgi-bin/ads/ad12484k.cgi/v=2.0D/sz=728X90A/kw=KEYWORD/97696/RETURN-CODE/JS/"></script>
 <noscript><a href="http://ads.addesktop.com/ads/ad12484k-map.cgi/ns/v=2.0D/sz=728X90A/kw=KEYWORD/" target="_top">
 <img src="http://ads.addesktop.com/cgi-bin/ads/ad12484k.cgi/ns/v=2.0D/sz=728X90A/kw=KEYWORD/" border="0" alt="Click Here"></a>
 </noscript>
 <!-- END BURST CODE --></div>
 
 
-
+ <script type="text/javascript">replaceTitles()</script>
 </div>
 <div id="pop" class="popup_div" style="display: none;"></div>
 
@@ -160,6 +205,88 @@ document.write('<scr'+'ipt src="http://ads.addesktop.com/cgi-bin/ads/ad12484k.cg
 _uacct = "UA-1008523-1";
 urchinTracker();
 </script>
+
+ <script type="text/javascript">
+  var browser = returnBrowserType();
+  if(browser =="IE"){
+    var scroll_speed = 1;
+    var block_scroll_speed = 5;
+  }
+  else{
+    var scroll_speed = 8;
+    var block_scroll_speed = 15;
+  }
+  var scroll_box = document.getElementById('videos_scroll_content');
+  var scroll_box_width = scroll_box.offsetWidth;
+  var scroll_content_1 = document.getElementById('scroll_content_1');
+  var scroll_content_2 = document.getElementById('scroll_content_2');
+  scroll_content_2.innerHTML = scroll_content_1.innerHTML;
+  
+  var scroll_left = 0;
+  var block_width = 170;
+  var delay = 0;
+
+  var moveright = '';
+  var moveleft = '';
+
+  move_right();
+  
+  function move_left() {
+    scroll_left += scroll_speed;
+    scroll_box.style.left = scroll_left + 'px';
+  }
+
+  function move_right() {
+    if (Math.abs(scroll_left) > scroll_box_width / 2) {
+      scroll_left = scroll_left + scroll_box_width / 2
+    }
+
+    if (Math.abs(scroll_left) % block_width < scroll_speed ) {
+      delay = 2000;
+    } else {
+      delay = 0;
+    }
+
+    scroll_left -= scroll_speed;
+    scroll_box.style.left = scroll_left + 'px';
+    
+    moveright = setTimeout("move_right()", delay);
+
+  }
+  
+  function move_block_right(upto) {
+    if (Math.abs(scroll_left) > scroll_box_width / 2) {
+      scroll_left = scroll_left + scroll_box_width / 2
+    }
+      
+    if (upto) {
+      upto -= block_scroll_speed;
+      if (upto <= 0) {
+        tmp = block_scroll_speed - Math.abs(upto);
+        scroll_left -= tmp;
+        scroll_box.style.left = scroll_left + 'px';
+        upto = 0;
+        clearTimeout(moveblockright);
+      }
+      else {
+        scroll_left -= block_scroll_speed;
+        scroll_box.style.left = scroll_left + 'px';
+        moveblockright = setTimeout("move_block_right("+ upto +")",0);
+      }
+    }
+    else {
+      if (moveleft) clearTimeout(moveleft);
+      if (moveright) clearTimeout(moveright);
+      tmp1 = Math.abs(scroll_left);
+      tmp2 = block_width - tmp1 % block_width;
+      moveblockright = setTimeout("move_block_right("+ tmp2 +")",100);
+    }
+  }
+  
+
+ </script>
+
+
 
 
 
