--- a/a/a9/a9./a9.com.html
+++ b/a/a9/a9./a9.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the a9.com privacy policy that was archived on 2007-06-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070630055540id_/http%3A//a9.com/-/company/privacypolicy.jsp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the a9.com privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230223801id_/http%3A//www.a9.com/-/company/privacypolicy.jsp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
 
@@ -29,7 +29,6 @@
   var A9SITE_INFO = "/-/api/toolbarapi/toolbar?method=siteinfo";
   var A9SIGNIN = "https://a9.com/-null";
   var a9IsGeneric=false;
-  var a9domain = "";
   var a9productSearchUrl = "http://amazon.com/s/ref=sr_a9ps_home/?url=search-alias%3Daps&tag=amzna9-1-20&field-keywords=";
   var a9bookSearchUrl = "http://amazon.com/s/ref=sr_a9ps_home/?url=search-alias%3Dstripbooks&tag=amzna9-1-20&field-keywords=";
   var a9searchUrl = "http://a9.com/";
@@ -335,7 +334,7 @@ Privacy Policy
  
 
 
-<span style="height:0px;display:none" id="_rid" a9x:rid="FE43173889A7FC78"></span>
+<span style="height:0px;display:none" id="_rid" a9x:rid="D0D86A568C613597"></span>
 
 
 
