--- a/s/si/sin/sinrex.com.html
+++ b/s/si/sin/sinrex.com.html
@@ -1,110 +1,163 @@
-<!--The following is the downloaded HTML source of the sinrex.com privacy policy that was archived on 2007-02-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070228231505id_/http%3A//sinrex.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sinrex.com privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230225548id_/http%3A//sinrex.com/privacy.htm) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/index.dwt" codeOutsideHTMLIsLocked="false" --><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/main.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <!-- InstanceBeginEditable name="doctitle" -->
 <title>Privacy Policy</title>
 <!-- InstanceEndEditable -->
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <link href="style.css" rel="stylesheet" type="text/css">
+<script language="JavaScript" type="text/javascript" src="js/jquery-latest.pack.js"></script>
+<script language="JavaScript" type="text/javascript" src="js/language-en.js"></script>
+<script language="JavaScript" type="text/javascript" src="js/nopcart.js"></script>
+<script type="text/JavaScript">
+<!--
+function MM_swapImgRestore() { //v3.0
+  var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.oSrc;
+}
+
+function MM_preloadImages() { //v3.0
+  var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
+    var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
+    if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
+}
+
+function MM_findObj(n, d) { //v4.01
+  var p,i,x;  if(!d) d=document; if((p=n.indexOf("?"))>0&&parent.frames.length) {
+    d=parent.frames[n.substring(p+1)].document; n=n.substring(0,p);}
+  if(!(x=d[n])&&d.all) x=d.all[n]; for (i=0;!x&&i<d.forms.length;i++) x=d.forms[i][n];
+  for(i=0;!x&&d.layers&&i<d.layers.length;i++) x=MM_findObj(n,d.layers[i].document);
+  if(!x && d.getElementById) x=d.getElementById(n); return x;
+}
+
+function MM_swapImage() { //v3.0
+  var i,j=0,x,a=MM_swapImage.arguments; document.MM_sr=new Array; for(i=0;i<(a.length-2);i+=3)
+   if ((x=MM_findObj(a[i]))!=null){document.MM_sr[j++]=x; if(!x.oSrc) x.oSrc=x.src; x.src=a[i+2];}
+}
+//-->
+</script>
 <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 </head>
-<body>
-<a name="top"></a>
-<div id="container">
-  <div id="headerDiv"><a href="index.htm"><img name="header" src="images/header.jpg" width="750" height="96" border="0" id="header" alt=""></a></div>
-  <div id="leftCol">
-    <div id="block">
-      <div id="blockTitle">Navigation</div>
-      <div id="blockContent"><a href="index.htm">Home</a> <a href="testimonials.htm">Testimonials</a> <a href="faq.htm">FAQs</a> <a href="privacy.htm">Privacy</a> <a href="guarantee.htm">Guarantee</a> <a href="how-to-order.htm">How to Order</a> <a href="shipping.htm">Shipping/Tracking</a> <a href="contact.htm">Contact Us</a></div>
-    </div>
-	<br>
-
-	 <div id="block">
-      <div id="blockTitle">Current Offer </div>
-      <div id="blockContent"><a href="how-to-order.htm">Get free shipping when you order now! </a></div>
-    </div>
-	<br>
-	
-	 <div id="block">
-      <div id="blockTitle">Feed</div>
-      <div id="blockContent">feed</div>
-    </div>
-	<br>
-	
-	 <div id="block">
-      <div id="blockTitle">Testimonials</div>
-      <div id="blockContent">testimonial content</div>
-    </div>
-	<br>
-	
-	
-	
-  </div>
-  <div id="rightCol">
-  
-	<div id="block">
-      <div id="blockTitle">Current News</div>
-      <div id="blockContent">Amazing new deals!<br>
-      <a href="how-to-order.htm">Click here for info.</a></div>
-    </div>
-	<br>
-
-	
-	<div id="block">
-      <div id="blockTitle">Contact Info </div>
-      <div id="blockContent">Contact us at<br>
-      <span class="red">1-866-970-9595</span></div>
-    </div>
-	
-	<br>
-
-	<div id="block">
-      <div id="blockTitle">Links</div>
-      <div id="blockContent"><a href="http://yahoo.com" target="_blank">Yahoo</a></div>
-    </div>
-  </div>
-</div>
-<div id="mainCol"><!-- InstanceBeginEditable name="main" -->
-  <p class="title">Privacy Policy</p>
-  <p>SinRex.com recognizes the importance of protecting your online privacy. This Privacy Statement explains our views and practices concerning privacy while visiting our site, and how they may affect you as a user of our affiliate program.</p>
-  <p>"You" or "Your" means you as a participant in or as a user of the SinRex.com website. "We" or "Our" or "Us" means SinRex.com and its subsidiaries.</p>
-  <p>All information transmitted, printed or otherwise submitted to SinRex.com will be deemed to be the property of SinRex.com and SinRex.com is free to use such information for any lawful purpose as detailed herein.</p>
+<body onload="MM_preloadImages('images/nav_r1_c1_f2.gif','images/nav_r1_c2_f2.gif','images/nav_r1_c3_f2.gif','images/nav_r1_c4_f2.gif','images/nav_r1_c5_f2.gif','images/nav_r1_c6_f2.gif');">
+<div class="wrapper">
+  <table width="100%" border="0" cellpadding="0" cellspacing="0" class="bg">
+    <tbody><tr>
+      <td width="223"><a href="index.htm"><img src="images/toplogo.png" alt="" width="223" height="75" border="0"></a></td>
+      <td> 
+		  
+		  <div class="phonesale">Order by Phone: 1-866-970-9595</div>
+		  
+		   <ul class="toplinks">
+          <li><a href="bonus-offers.htm">Bonus Offers</a></li>
+          <li><a href="clinical-studies.htm">Clinical Studies</a></li>
+          <li><a href="comparison.htm">Comparison</a></li>
+          <li><a href="faq.htm">F.A.Q.</a></li>
+          <li><a href="guarantee.htm">Guarantee</a></li>
+        </ul>  </td>
+      <td><!-- BEGIN LivePerson Button Code -->
+        <div align="center">
+		
+		<a id="_lpChatBtn" href="http://server.iad.liveperson.net/hc/29442436/?cmd=file&amp;file=visitorWantsToChat&amp;site=29442436&amp;byhref=1&amp;imageUrl=http://server.iad.liveperson.net/hcp/Gallery/ChatButton-Gallery/English/Small/2c" target="chat29442436" onclick="lpButtonCTTUrl = 'http://server.iad.liveperson.net/hc/29442436/?cmd=file&amp;file=visitorWantsToChat&amp;site=29442436&amp;imageUrl=http://server.iad.liveperson.net/hcp/Gallery/ChatButton-Gallery/English/Small/2c&amp;referrer='+escape(document.location); lpButtonCTTUrl = (typeof(lpAppendVisitorCookies) != 'undefined' ? lpAppendVisitorCookies(lpButtonCTTUrl) : lpButtonCTTUrl); window.open(lpButtonCTTUrl,'chat29442436','width=475,height=400,resizable=yes');return false;"><img src="http://server.iad.liveperson.net/hc/29442436/?cmd=repstate&amp;site=29442436&amp;channel=web&amp;&amp;ver=1&amp;imageUrl=http://server.iad.liveperson.net/hcp/Gallery/ChatButton-Gallery/English/Small/2c" name="hcIcon" border="0"></a>
+          <!-- END LivePerson Button code --> 
+          </div></td>
+    </tr>
+  </tbody></table>
+  <table width="751" border="0" align="center" cellpadding="0" cellspacing="0">
+    <!-- fwtable fwsrc="nav.png" fwbase="nav.gif" fwstyle="Dreamweaver" fwdocid = "2131862876" fwnested="0" -->
+    <tbody><tr>
+      <td width="108"><img src="images/spacer.gif" width="108" height="1" border="0" alt=""></td>
+      <td width="134"><img src="images/spacer.gif" width="134" height="1" border="0" alt=""></td>
+      <td width="138"><img src="images/spacer.gif" width="138" height="1" border="0" alt=""></td>
+      <td width="141"><img src="images/spacer.gif" width="141" height="1" border="0" alt=""></td>
+      <td width="130"><img src="images/spacer.gif" width="130" height="1" border="0" alt=""></td>
+      <td width="99"><img src="images/spacer.gif" width="99" height="1" border="0" alt=""></td>
+      <td width="1"><img src="images/spacer.gif" width="1" height="1" border="0" alt=""></td>
+    </tr>
+    <tr>
+      <td><a href="index.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('nav_r1_c1','','images/nav_r1_c1_f2.gif',1);"><img name="nav_r1_c1" src="images/nav_r1_c1.gif" width="108" height="46" border="0" id="nav_r1_c1" alt=""></a></td>
+      <td><a href="products.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('nav_r1_c2','','images/nav_r1_c2_f2.gif',1);"><img name="nav_r1_c2" src="images/nav_r1_c2.gif" width="134" height="46" border="0" id="nav_r1_c2" alt=""></a></td>
+      <td><a href="what-type-of-results-should-you-expect.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('nav_r1_c3','','images/nav_r1_c3_f2.gif',1);"><img name="nav_r1_c3" src="images/nav_r1_c3.gif" width="138" height="46" border="0" id="nav_r1_c3" alt=""></a></td>
+      <td><a href="testimonials.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('nav_r1_c4','','images/nav_r1_c4_f2.gif',1);"><img name="nav_r1_c4" src="images/nav_r1_c4.gif" width="141" height="46" border="0" id="nav_r1_c4" alt=""></a></td>
+      <td><a href="ingredients.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('nav_r1_c5','','images/nav_r1_c5_f2.gif',1);"><img name="nav_r1_c5" src="images/nav_r1_c5.gif" width="130" height="46" border="0" id="nav_r1_c5" alt=""></a></td>
+      <td><a href="contact.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('nav_r1_c6','','images/nav_r1_c6_f2.gif',1);"><img name="nav_r1_c6" src="images/nav_r1_c6.gif" width="99" height="46" border="0" id="nav_r1_c6" alt=""></a></td>
+      <td><img src="images/spacer.gif" width="1" height="46" border="0" alt=""></td>
+    </tr>
+  </tbody></table>
+  <div align="center"><a href="index.htm"><img src="images/header-new.jpg" width="750" height="167" border="0"></a> </div>
+  <table width="100%" border="0" cellspacing="0" cellpadding="0">
+    <tbody><tr>
+      <td><div align="center"><!-- InstanceBeginEditable name="cart" -->
+    <div id="cartOutput"></div>    <!-- InstanceEndEditable --></div></td>
+    </tr>
+  </tbody></table>
+  <div class="padder"><!-- InstanceBeginEditable name="main-body" -->
+  <h1 class="title">Privacy Policy</h1>
+  <p><strong>SinRex.com</strong> recognizes the importance of protecting your online privacy. This Privacy Statement explains our views and practices concerning privacy while visiting our site, and how they may affect you as a user of our affiliate program.<img src="images/privacy.png" width="135" height="87" align="right"></p>
+  <p>"You" or "Your" means you as a participant in or as a user of the <strong>SinRex.com</strong> website. "We" or "Our" or "Us" means <strong>SinRex.com</strong> and its subsidiaries.</p>
+  <p>All information transmitted, printed or otherwise submitted to <strong>SinRex.com</strong> will be deemed to be the property of <strong>SinRex.com</strong> and <strong>SinRex.com</strong> is free to use such information for any lawful purpose as detailed herein.</p>
   <p>We reserve the right to release any such information to law enforcement or other government officials only in order to comply with the law.</p>
-  <h3><strong>Section 1</strong></h3>
+  <h3 class="subtitles"><strong>Section 1</strong></h3>
   <p><strong>    Collected Information</strong></p>
   <p>We automatically collect and/or track the following:</p>
   <ol>
     <li>Information knowingly provided by you through our on-line forms, registration forms, surveys, and/or other entries, such as email addresses, personal, financial or demographic information;</li>
     <li> Information, user specific or aggregate, on what pages our visitors access;</li>
-    <li> And E-mail addresses of customers that communicate with SinRex.com via e-mail.</li>
+    <li> And E-mail addresses of customers that communicate with <strong>SinRex.com</strong> via e-mail.</li>
   </ol>
-  <h3>Section 2</h3>
+  <h3 class="subtitles">Section 2</h3>
   <p><strong>    Use of Data Collected</strong></p>
   <p>Information collected by us may be added to our databases and used for future marketing, e-mails or postal mailings regarding site updates, new products and services, upcoming events, and/or status of online accounts. By using this site, you agree that you may be contacted in any manner mentioned in this section.</p>
-  <h3>Section 3</h3>
+  <h3 class="subtitles">Section 3</h3>
   <p><strong>    Our Right to Contact You</strong></p>
   <p>    We reserve the right to contact you regarding your account status and changes to purchase agreements, privacy policy, or any other policies or agreements relevant to you.</p>
-  <h3>Section 4</h3>
+  <h3 class="subtitles">Section 4</h3>
   <p><strong>    Our Right to Change</strong></p>
   <p>We reserve the right to change this policy at any time by updating or revising our privacy policy or by posting the changes online at our site.</p>
-  <h3>Section 5</h3>
+  <h3 class="subtitles">Section 5</h3>
   <p><strong>    Our Contact Information</strong></p>
-  <p>If you have any questions about this privacy statement, the practices of this site, or your dealings with this website, you can contact us via email sent to: webmaster [at] SinRex.com.</p>
-  <h3>Section 6</h3>
+  <p>If you have any questions about this privacy statement, the practices of this site, or your dealings with this website, you can contact us via email sent to: <strong>webmaster</strong> [at] <strong>SinRex.com</strong>.</p>
+  <h3 class="subtitles">Section 6</h3>
   <p><strong>    Anti Spam Policy. Can-Spam Act Compliance</strong></p>
-  <p>SinRex.com is dedicated to ensuring compliance with the 'Can-Spam Act', which took effect January 1, 2004. You may receive email from SinRex.com in the following circumstances:</p>
+  <p><strong>SinRex.com</strong> is dedicated to ensuring compliance with the 'Can-Spam Act', which took effect January 1, 2004. You may receive email from <strong>SinRex.com</strong> in the following circumstances:</p>
   <ol>
     <li>Acknowledging your purchase request has been received and requesting additional action requests for additional information to support your current application.</li>
     <li>Response to your inquiries regarding the status of your order.</li>
     <li> Thanking you for your valued business.</li>
     <li>Advertisements for our products, services, changes in services, new product availability</li>
   </ol>
-  <p>As a visitor of SinRex.com and consumer of SinRex products,you must accept the terms and agreements of our Terms of Service and Privacy Policy.</p>
-
+  <p>As a visitor of <strong>SinRex.com</strong> and consumer of <strong>SinRex</strong> products,you must accept the terms and agreements of our Terms of Service and Privacy Policy.</p>
                     <!-- InstanceEndEditable --></div>
+  
+    <table width="100%" border="0" cellspacing="0" cellpadding="0" class="ordernow">
+      <tbody><tr>
+        <td><div align="center"><a href="ingredients.htm"><img src="images/ingredients.png" width="192" height="73" border="0"></a></div></td>
+        <td><div align="center"><a href="bonus-offers.htm"><img src="images/freeoffers.png" width="192" height="73" border="0"></a></div></td>
+        <td><div align="center"><a href="products.htm"><img src="images/ordernow.png" border="0"></a></div></td>
+      </tr>
+    </tbody></table>
+  <div class="footer">
+    <div align="center"><img src="images/creditcards.jpg" width="195" height="50" border="0" align="absmiddle"> SinRex © 2008 &nbsp;
+      <ul class="botlinks">
+        <li><a href="http://www.sinrex.com/info">Enhancement Articles</a></li>
+        <li><a href="privacy.htm">Privacy</a></li>
+        <li><a href="shipping.htm">Shipping</a></li>
+        <li><a href="terms.htm">Terms</a></li>
+        <li><a href="trademarks.htm">Trademarks</a></li>
+        <li><a href="http://www.cashassociate.com/">Webmasters</a></li>
+      </ul></div>
+  </div>
+</div>
 
-<div id="footer"> © sinrex.com 2006 </div>
+
+<!-- BEGIN Invitation Positioning  -->
+<script language="javascript" type="text/javascript">
+var lpPosY = 100;
+</script>
+<!-- END Invitation Positioning  -->
+
+<!-- BEGIN HumanTag Monitor. DO NOT MOVE! MUST BE PLACED JUST BEFORE THE /BODY TAG --><script language="javascript" src="http://server.iad.liveperson.net/hc/29442436/x.js?cmd=file&amp;file=chatScript3&amp;site=29442436&amp;&amp;imageUrl=http://server.iad.liveperson.net/hcp/Gallery/ChatButton-Gallery/English/Small/2c"> </script><!-- END HumanTag Monitor. DO NOT MOVE! MUST BE PLACED JUST BEFORE THE /BODY TAG -->
+
 
 <!-- InstanceEnd -->
 </body></html>
