--- a/y/ya/yak/yakimaherald.com.html
+++ b/y/ya/yak/yakimaherald.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the yakimaherald.com privacy policy that was archived on 2007-06-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070630022556id_/http%3A//www.yakimaherald.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the yakimaherald.com privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230231855id_/http%3A//yakimaherald.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -63,7 +63,7 @@ urchinTracker();
       document.write ("&amp;referer=" + escape(document.referer));
    document.write ("'><" + "/script>");
 //-->
-</script><script language="JavaScript" type="text/javascript" src="http://www.yakima-herald.com/banners/adjs.php?n=561325871&amp;what=zone:21&amp;block=1&amp;blockcampaign=1&amp;exclude=,"></script><noscript><a href='http://www.yakima-herald.com/banners/adclick.php?n=a265db04' target='_blank'><img src='http://www.yakima-herald.com/banners/adview.php?what=zone:21&amp;n=a265db04' border='0' alt=''></a></noscript>
+</script><script language="JavaScript" type="text/javascript" src="http://www.yakima-herald.com/banners/adjs.php?n=267775994&amp;what=zone:21&amp;block=1&amp;blockcampaign=1&amp;exclude=,"></script><noscript><a href='http://www.yakima-herald.com/banners/adclick.php?n=a265db04' target='_blank'><img src='http://www.yakima-herald.com/banners/adview.php?what=zone:21&amp;n=a265db04' border='0' alt=''></a></noscript>
 	
 	</td>
 </tr>
@@ -518,7 +518,7 @@ Last updated March 21, 2007<br><br>
       document.write ("&amp;referer=" + escape(document.referrer));
    document.write ("'><" + "/script>");
 //-->
-</script><script language="JavaScript" type="text/javascript" src="http://yakimaherald.com/banners/adjs.php?n=830020875&amp;what=zone:35&amp;target=_blank&amp;exclude=,"></script><noscript><a href='http://yakimaherald.com/banners/adclick.php?n=a36a3534' target='_blank'><img src='http://yakimaherald.com/banners/adview.php?what=zone:35&amp;n=a36a3534' border='0' alt=''></a></noscript>
+</script><script language="JavaScript" type="text/javascript" src="http://yakimaherald.com/banners/adjs.php?n=133358039&amp;what=zone:35&amp;target=_blank&amp;exclude=,"></script><noscript><a href='http://yakimaherald.com/banners/adclick.php?n=a36a3534' target='_blank'><img src='http://yakimaherald.com/banners/adview.php?what=zone:35&amp;n=a36a3534' border='0' alt=''></a></noscript>
 
 
 				</td>
