asmnet.com (archived on 2007-12-30)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 14614,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.28,
  "homepage_snapshot_redirected_domain": "asmnet.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20071001014525id_/http://www.asmnet.com/command/home_showHome.cfm",
  "homepage_snapshot_url": "https://web.archive.org/web/20071001014525id_/http%3A//asmnet.com",
  "interval": "2007_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "asmnet.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071230233505id_/http%3A//www.asmnet.com/command/privacy_showHome.cfm",
  "policy_title": "[advantage sales & marketing]",
  "policy_url": "asmnet.com/command/privacy_showHome.cfm",
  "sha1": "80d3b32d749d72ebd35e642f0c0f98ee8d2fed9e",
  "simhash": 10313514067672876376,
  "simhash_updated": false,
  "site_hostname": "asmnet.com",
  "site_url": "http://asmnet.com",
  "smog": 15.2,
  "strict_updated": false,
  "timestamp": "20071230233505",
  "word_count": 2363,
  "year": 2007
}

--- a/a/as/asm/asmnet.com.html
+++ b/a/as/asm/asmnet.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the asmnet.com privacy policy that was archived on 2007-06-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070625120356id_/http%3A//www.asmnet.com/command/privacy_showHome.cfm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the asmnet.com privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230233505id_/http%3A//www.asmnet.com/command/privacy_showHome.cfm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 	<title>[advantage sales &amp; marketing]</title>
@@ -63,9 +63,10 @@ color:black;
 
 //Contents for menu 1
 var menu1=new Array()
-menu1[0]='<a href="http://www.asmnet.com/command/values_mission.cfm">Living Our Values</a>'
-menu1[1]='<a href="http://www.asmnet.com/command/about_divisions.cfm">Our Divisions</a>'
-menu1[2]='<a href="http://www.asmnet.com/command/communicate_events.cfm">ASM Communicates</a>'
+menu1[0]='<a href="http://www.asmnet.com/command/communicate_events.cfm">ASM Communicates</a>'
+menu1[1]='<a href="http://www.asmnet.com/command/values_mission.cfm">Living Our Values</a>'
+menu1[2]='<a href="http://www.asmnet.com/command/about_mwa.cfm">MarketWide Advantage</a>'
+menu1[3]='<a href="http://www.asmnet.com/command/about_divisions.cfm">Our Divisions</a>'
    
 //Contents for menu 2, and so on
 var menu2=new Array()
@@ -87,9 +88,10 @@ var menu3=new Array()
 menu3[0]='<a href="http://www.asmnet.com/command/classes_convenience.cfm">Convenience</a>'
 menu3[1]='<a href="http://www.asmnet.com/command/classes_drug.cfm">Drug/Dollar</a>'
 menu3[2]='<a href="http://www.asmnet.com/command/classes_grocery.cfm">Grocery/Food</a>'
-menu3[3]='<a href="http://www.asmnet.com/command/classes_club.cfm">Mass/Pet</a>'
-menu3[4]='<a href="http://www.asmnet.com/command/classes_natural.cfm">Natural/Specialty</a>'
-menu3[5]='<a href="http://www.asmnet.com/command/classes_walmart.cfm">Wal-Mart</a>'
+menu3[3]='<a href="http://www.asmnet.com/command/classes_home_center.cfm">Home Center/Hardware</a>'
+menu3[4]='<a href="http://www.asmnet.com/command/classes_club.cfm">Mass/Pet</a>'
+menu3[5]='<a href="http://www.asmnet.com/command/classes_natural.cfm">Natural/Specialty</a>'
+menu3[6]='<a href="http://www.asmnet.com/command/classes_walmart.cfm">Wal-Mart</a>'
 
 var menu4=new Array()
 menu4[0]='<a href="http://www.asmnet.com/command/marketing_campaigners.cfm">Campaigners</a>'
@@ -102,13 +104,13 @@ var menu5=new Array()
 menu5[0]='<a href="http://www.asmnet.com/command/biz_adesso.cfm">Adesso</a>'
 menu5[1]='<a href="http://www.asmnet.com/command/biz_campaigners.cfm">Campaigners</a>'
 menu5[2]='<a href="http://www.asmnet.com/command/biz_ims.cfm">INtegrated Marketing</a>'
-menu5[3]='<a href="http://www.asmnet.com/command/biz_kalty.cfm">Kalty Salios Sales</a>'
-menu5[4]='<a href="http://www.asmnet.com/command/biz_marketration.cfm">Marketration</a>'
-menu5[5]='<a href="http://www.asmnet.com/command/biz_promoPoint.cfm">PromoPoint Marketing</a>'
-menu5[6]='<a href="http://www.asmnet.com/command/biz_retailstoreserv.cfm">Retail Store Services</a>'
-menu5[7]='<a href="http://www.asmnet.com/command/biz_superfridge.cfm">Superfridge</a>'
-menu5[8]='<a href="http://www.asmnet.com/command/biz_tryfoods.cfm">Try-Foods International</a>'
-menu5[9]='<a href="http://www.asmnet.com/command/xpress_showHome.cfm">Xpress Services</a>'
+/* menu5[3]='<a href="http://www.asmnet.com/command/biz_kalty.cfm">Kalty Salios Sales</a>' */
+menu5[3]='<a href="http://www.asmnet.com/command/biz_marketration.cfm">Marketration</a>'
+menu5[4]='<a href="http://www.asmnet.com/command/biz_promoPoint.cfm">PromoPoint Marketing</a>'
+/* menu5[6]='<a href="http://www.asmnet.com/command/biz_retailstoreserv.cfm">Retail Store Services</a>' */
+menu5[5]='<a href="http://www.asmnet.com/command/biz_superfridge.cfm">Superfridge</a>'
+menu5[6]='<a href="http://www.asmnet.com/command/biz_tryfoods.cfm">Try-Foods International</a>'
+menu5[7]='<a href="http://www.asmnet.com/command/xpress_showHome.cfm">Xpress Services</a>'
 
 
 
@@ -116,13 +118,15 @@ var menu6=new Array()
 menu6[0]='<a href="http://www.asmnet.com/command/career_job_opp_state.cfm">Career Opportunities</a>'
 menu6[1]='<a href="http://www.asmnet.com/command/join_diversity.cfm">Diversity</a>'
 menu6[2]='<a href="http://www.asmnet.com/command/join_internship.cfm">Internship</a>'
-menu6[3]='<a href="http://www.asmnet.com/command/join_philosophy.cfm">Talent Philosophy</a>'
+menu6[3]='<a href="http://www.asmnet.com/command/join_mwa.cfm">MarketWide Advantage</a>'
+menu6[4]='<a href="http://www.asmnet.com/command/join_philosophy.cfm">Talent Philosophy</a>'
+/* menu6[4]='<a href="http://www.asmnet.com/command/career_job_opp_state.cfm">USA Careers</a>' */
 
 var menu7=new Array()
 menu7[0]='<a href="http://www.asmnet.com/command/contact_executives.cfm">Executive Team</a>'
 menu7[1]='<a href="http://www.asmnet.com/command/contact_divisional.cfm">Divisional Contacts</a>'
 menu7[2]='<a href="http://www.asmnet.com/command/contact_hr.cfm">HR Contacts</a>'
-menu7[3]='<a href="mailto:lyndsay.snyder@asmnet.com">Webmaster</a>'
+menu7[3]='<a href="mailto:lyndsay@metacre8.com">Webmaster</a>'
 
 var menu8=new Array()
 menu8[0]='<a href="http://www.asmnet.com/command/international_canada.cfm">Canada</a>'
@@ -313,12 +317,12 @@ document.onclick=hidemenu
 
 <table border="0" cellpadding="0" cellspacing="0">
 <tbody><tr>
-    <td valign="bottom"><a href="about_showHome.cfm" onmouseover="dropdownmenu(this, event, menu1, '135px')" onmouseout="delayhidemenu()"><img src="http://www.asmnet.com/images/tab_about_out.gif" width="58" height="17" border="0" onmouseover="swap(this, 'over')" onmouseout="swap(this, 'out')"></a></td>
+    <td valign="bottom"><a href="about_showHome.cfm" onmouseover="dropdownmenu(this, event, menu1, '155px')" onmouseout="delayhidemenu()"><img src="http://www.asmnet.com/images/tab_about_out.gif" width="58" height="17" border="0" onmouseover="swap(this, 'over')" onmouseout="swap(this, 'out')"></a></td>
     <td></td>
     <td valign="bottom"><a href="services_showHome.cfm" onmouseover="dropdownmenu(this, event, menu2, '150px')" onmouseout="delayhidemenu()"><img src="http://www.asmnet.com/images/tab_services_out.gif" width="81" height="17" border="0" onmouseover="swap(this, 'over')" onmouseout="swap(this, 'out')"></a></td>
     <td></td>
     
-    <td valign="bottom"><a href="classes_showHome.cfm" onmouseover="dropdownmenu(this, event, menu3, '120px')" onmouseout="delayhidemenu()"><img src="http://www.asmnet.com/images/tab_classes_out.gif" width="102" height="17" border="0" onmouseover="swap(this, 'over')" onmouseout="swap(this, 'out')"></a></td>
+    <td valign="bottom"><a href="classes_showHome.cfm" onmouseover="dropdownmenu(this, event, menu3, '150px')" onmouseout="delayhidemenu()"><img src="http://www.asmnet.com/images/tab_classes_out.gif" width="102" height="17" border="0" onmouseover="swap(this, 'over')" onmouseout="swap(this, 'out')"></a></td>
     <td></td>
     <td valign="bottom"><a href="marketing_showHome.cfm" onmouseover="dropdownmenu(this, event, menu4, '185px')" onmouseout="delayhidemenu()"><img src="http://www.asmnet.com/images/tab_marketing_out.gif" width="69" height="17" border="0" onmouseover="swap(this, 'over')" onmouseout="swap(this, 'out')"></a></td>
     <td></td>
