--- a/b/bl/blo/blogskins.com.html
+++ b/b/bl/blo/blogskins.com.html
@@ -1,15 +1,15 @@
-<!--The following is the downloaded HTML source of the blogskins.com privacy policy that was archived on 2007-06-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070623163141id_/http%3A//www.blogskins.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the blogskins.com privacy policy that was archived on 2007-12-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071231003046id_/http%3A//www.blogskins.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 	<title>Blog Templates - Privacy Policy</title>
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.2.0/build/fonts/fonts-min.css">
-	<style type="text/css" media="all">@import "http://images.blogskins.com/site_css/default.css";</style>
+	<style type="text/css" media="all">@import "http://images.blogskins.com/site_css/default_1198456222.css";</style>
 	
-	<script language="JavaScript1.2" src="http://images.blogskins.com/site_js/main.js" type="text/javascript"></script>
-	<script src="http://images.blogskins.com/site_js/prototype.js" type="text/javascript"></script>
-	<script src="http://images.blogskins.com/site_js/scriptaculous.js" type="text/javascript"></script>
+	<script language="JavaScript1.2" src="http://images.blogskins.com/site_js/main_1198350299.js" type="text/javascript"></script>
+	<script src="http://images.blogskins.com/site_js/1.8/prototype.c.js" type="text/javascript"></script>
+	<script src="http://images.blogskins.com/site_js/1.8/scriptaculous.c.js" type="text/javascript"></script>
 	<script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
 	<script type="text/javascript">
 	_uacct = "UA-81551-1";
@@ -35,12 +35,12 @@
 		</form>
 		</div>
 	</td>
-	<td class="logo" align="right" width="175" valign="bottom">
+	<td class="logo" align="right" width="195" valign="bottom">
 		<a href="/"><img src="http://images.blogskins.com/site_images/header-redesigned.png" alt="BlogSkins: Redesigned." height="45" width="150"></a><br>
         					<a href="/login.php" style="padding-top: 0px;" onclick="return toggleLoginForm();">Log in</a> or <a href="/signup.php" style="padding-top: 0px;">Register</a>
 		        	</td>
-</tr>
-<tr>
+</tr>	
+	<tr>
 	<td colspan="3" align="right">
 		<div id="header_login" style="display: none;">
 		<form method="post" action="/login.php">
@@ -50,7 +50,7 @@
 		</div>
 	</td>
 </tr>
-<tr>
+	<tr>
 	<td align="center" colspan="3">
 	<!-- Begin: AdBrite -->
 	<script type="text/javascript">
@@ -104,9 +104,37 @@ contact@blogskins.com
 		<br><br>
 	</td>
 </tr>
-
 <tr>
-	<td class="footernav" align="left" valign="top">
+	<td id="footer_text_ads" colspan="2">
+		<center><span name="15929">
+<table cellspacing="0" cellpadding="0" width="95%" border="0" class="lw">
+  <tbody><tr>
+    <td>
+      <a class="lw" href="http://www.wailingbanshee.co.uk">Video production</a> - wailing banshee films - corporate video production services in the uk and new york.  3d animation, video editing, streaming media and media communications.  |||  
+      <a class="lw" href="http://www.sportsbook.com">Online Sports Betting</a> - online sports betting, poker room and casino,  safe and secure betting.  |||  
+      <a class="lw" href="http://www.superbook.com">Online Sports Betting</a> - superbook.com is the only sportsbook on the planet to offer two free $10 bets every month, daily sports and handicapping articles.  |||  
+      <a class="lw" href="http://www.ecomatrix.net">web templates</a> - professional web templates for business  |||  
+      <a class="lw" href="http://dishtv.blogware.com/blog">satellite tv news blog</a> - dish network related news/blog &amp; offers.  |||  
+      <a class="lw" href="http://www.freeglide.co.uk">Heelys, skate shoes with a wheel in the heel</a> - official dealer of heelys. widest choice of styles in the uk. free, fast delivery and ever order goes in the free heelys monthly draw.the trainer with the wheel in the heel, allowing you to walk, run or roll whenever you like.  |||  
+      <a class="lw" href="http://www.internationalprofitassociates-careers.com/">International Profit Associates</a>   |||  
+      <a class="lw" href="http://www.adscarsforsale.com/">Cars and motorcycles for sale</a> - free online classifieds dedicated to cars and motorcycles listed by country.
+    </td>
+  </tr>
+</tbody></table></span>
+</center><br>
+		<center><span name="15929">
+<table cellspacing="0" cellpadding="0" width="95%" border="0" class="lw">
+  <tbody><tr>
+    <td>
+      <a class="lw" href="http://www.academylooseleaf.com" target="_blank">Custom Binder</a> - academy looseleaf is a custom binder and custom packaging manufacturer that produces custom binders and custom packages including custom 3 ring (and other) binders, custom boxes, custom notebooks, custom presentation folders &amp; hotel guest directories
+    </td>
+  </tr>
+</tbody></table></span>
+</center><br>
+	</td>
+</tr>
+<tr>
+	<td class="footernav" align="left" valign="top" width="100%">
 		<table width="100%" cellspacing="0" cellpadding="0">
 			<tbody><tr>
 				<td valign="top" width="50">
@@ -143,12 +171,11 @@ contact@blogskins.com
 					<h4>Account</h4>
                     										- <a href="/login.php">Log In</a><br>
 					- <a href="/signup.php">Register</a><br>
-					                    					<!-- - <a href="/gopro.php">Go Pro</a> -->
-				</td>
+					                    				</td>
 			</tr>
 		</tbody></table>
 	</td>
-	<td class="footernavright" valign="top" align="right" width="175">
+	<td class="footernavright" valign="top" align="right" width="195">
 		<a href="/"><img src="http://images.blogskins.com/site_images/footer.png" alt="</BlogSkins>" height="33" width="140"></a>
 	</td>
 </tr>
@@ -172,7 +199,7 @@ contact@blogskins.com
 <tr>
 	<td class="footer" valign="top" colspan="2">
 		<p>All original content copyright © 2001-2007 Myles Grant.  This is a <a href="http://myleswithay.com/">Myles (with a y)</a> production.<br>
-		Queries: 0; Execution time: 0.0017s (DB: 0.0000s)</p>
+		Queries: 0; Execution time: 0.0023s (DB: 0.0000s)</p>
 
         		        	</td>
 </tr>
