--- a/b/be/bet/betterrecipes.com.html
+++ b/b/be/bet/betterrecipes.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the betterrecipes.com privacy policy that was archived on 2007-05-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070518131847id_/http%3A//betterrecipes.com/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the betterrecipes.com privacy policy that was archived on 2007-12-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071231010227id_/http%3A//www.betterrecipes.com/privacypolicy.html) for the most accurate reproduction.-->
 
 <html><head><link href="/bhg/files/legal/privacy.css" rel="stylesheet" type="text/css">
 
