--- a/n/ne/net/netglimse.com.html
+++ b/n/ne/net/netglimse.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the netglimse.com privacy policy that was archived on 2007-06-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070623222515id_/http%3A//www.netglimse.com/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the netglimse.com privacy policy that was archived on 2007-12-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071231013109id_/http%3A//www.netglimse.com/privacy.shtml) for the most accurate reproduction.-->
 
 <html><head>
 <link rel="stylesheet" href="/style.css" type="text/css">
@@ -11,18 +11,18 @@
 </head>
 <body>
 
-<table cellpadding="0" cellspacing="0" border="0"><tbody><tr><td><a href="http://www.netglimse.com"><img src="/images/logo.jpg" border="0" alt="logo"></a></td><td width="1%"></td><td><script type="text/javascript"><!--
-google_ad_client = "pub-3598568953970883";
-google_alternate_ad_url =
-"http://www.netglimse.com/banners/fastclick/728x90.html";
-google_ad_width = 728;
-google_ad_height = 90;
-google_ad_format = "728x90_as";
-google_ad_type = "text_image";
-google_ad_channel ="";
-//--></script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
+<table cellpadding="0" cellspacing="0" border="0"><tbody><tr><td><a href="http://www.netglimse.com"><img src="/images/logo.jpg" border="0" alt="logo"></a></td><td width="1%"></td><td><!-- TF 468x60 JScript HORIZ code -->
+<center><script language="javascript"><!--
+document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.ad?site=Netglimsecom&adSpace=ROS&size=468x60&type=horiz&requestID='+((new Date()).getTime() % 2147483648) + Math.random()+'"></scr'+'ipt>');
+//-->
+</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=Netglimsecom&amp;adSpace=ROS&amp;size=468x60&amp;type=horiz&amp;requestID=20220845270.7714214179636287"></script>
+<noscript>
+   <a href="http://a.tribalfusion.com/i.click?site=Netglimsecom&adSpace=ROS&size=468x60&requestID=1892838620" target=_blank>
+   <img src="http://a.tribalfusion.com/i.ad?site=Netglimsecom&adSpace=ROS&size=468x60&requestID=1892838620" 
+                  width=468 height=60 border=0 alt="Click Here"></a>
+</noscript>
+</center>
+<!-- TF 468x60 JScript HORIZ code -->
 </td></tr></tbody></table>
 
 
@@ -128,7 +128,7 @@ google_ad_channel ="";
 <tr><td class="bodyfont" colspan="6" align="center"><b>&nbsp;
 <a href="/" style="text-decoration: none">Home</a>  | <a href="/greetings" style="text-decoration: none">Ecards</a>  | <a href="/holidays" style="text-decoration: none">Holidays</a>  | <a href="/movies" style="text-decoration: none">Movies</a>  | <a href="/celebs" style="text-decoration: none">Celebrities</a>  | <a href="/celebs/dirs/a.shtml" style="text-decoration: none">Celeb Links</a>  | <a href="/feedback.shtml" style="text-decoration: none">Contact Us</a></b></td></tr>
 <tr><td height="10"></td></tr>
-<tr><td class="bodyfont" colspan="6" align="center"><b><font size="1">Copyright © 2001-2004 NetGlimse.com. <a href="/privacy.shtml">Privacy Policy</a>All Rights Reserved.</font> <br><br></b></td></tr>
+<tr><td class="bodyfont" colspan="6" align="center"><b><font size="1">Copyright © 2007 NetGlimse.com. <a href="/privacy.shtml">Privacy Policy</a>All Rights Reserved.</font> <br><br></b></td></tr>
 </tbody></table>
 
 
