stylecraze.com (archived on 2007-12-31)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education;shopping",
  "char_count": 5018,
  "classifier_probability": 0.93,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.08,
  "homepage_snapshot_redirected_domain": "stylecraze.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20071006065021id_/http://www.stylecraze.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20071006065021id_/http%3A//stylecraze.com",
  "interval": "2007_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "stylecraze.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071231044926id_/http%3A//www.stylecraze.com/privacypolicy.html",
  "policy_title": "stylecraze.com",
  "policy_url": "stylecraze.com/privacypolicy.html",
  "sha1": "adfcb26722eb48b1395cacc58b028affc0aea39d",
  "simhash": 5291445052970996244,
  "simhash_updated": false,
  "site_hostname": "stylecraze.com",
  "site_url": "http://stylecraze.com",
  "smog": 12.34,
  "strict_updated": false,
  "timestamp": "20071231044926",
  "word_count": 795,
  "year": 2007
}

--- a/s/st/sty/stylecraze.com.html
+++ b/s/st/sty/stylecraze.com.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the stylecraze.com privacy policy that was archived on 2007-06-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070601033813id_/http%3A//www.stylecraze.com/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the stylecraze.com privacy policy that was archived on 2007-12-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071231044926id_/http%3A//www.stylecraze.com/privacypolicy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html><head><script language="javascript"> 
  <!-- 
  (new Image).src="http://store.yahoo.net/cgi-bin/refsd?e=http://www.stylecraze.com/privacypolicy.html&h=www.stylecraze.com&v=1.0&dr=" + escape(document.referrer); 
  --> 
  </script>
-<title>stylecraze.com</title><meta name="Keywords" content="Air Jordan Shoes, Air Force One 1, Nike Dunk, Air Max, Bathing Ape, Bape Sta, Adidas"><link rel="stylesheet" type="text/css" href="css-base.css"><link rel="stylesheet" type="text/css" href="css-element.css"><link rel="stylesheet" type="text/css" href="css-contents.css"><link rel="stylesheet" type="text/css" href="css-edits.css"></head><body class="vertical" id="maintype">Nike Air Jordan, Nike Air Force One, Nike Dunk, Nike Air Max, Shox, Bathing Ape Bapes Bape Sta, Adidas Shoes, Diesel, Evisu, Red Monkey<div id="container"><div id="header"><ul id="nav-general"><li><a href="index.html">home</a></li><li><a href="info.html">About Us</a></li><li><a href="privacypolicy.html">Privacy Policy</a></li><li><a href="mailto:sales@stylecraze.com">Contact Us</a></li><li><a href="ind.html">site map</a></li><li><a href="https://order.store.yahoo.net/cgi-bin/wg-order?yhst-91142502824330">View Cart</a></li></ul><br class="clear"><h3 id="brandmark"><a href="index.html" title=""></a></h3></div><form method="GET" action="http://search.store.yahoo.com/cgi-bin/nsearch" name="searcharea" id="searcharea"><fieldset><label class="labelfield" for="searchfield"><span>Search</span><input name="query" type="text" id="query"></label><label class="buttonlabel" for="searchsubmit"><input name="searchsubmit" type="submit" value="Go" class="ys_primary" id="searchsubmit"><input name="vwcatalog" type="hidden" value="yhst-91142502824330"></label></fieldset><input type="hidden" name=".autodone" value="http://www.stylecraze.com/privacypolicy.html"></form><div id="bodyshell"><div id="bodycontent"><div id="info-div"><i>This site is hosted by Yahoo! Store. Yahoo! hosts the store pages, ordering
+<title>stylecraze.com</title><meta name="Keywords" content="Air Jordan Shoes, Air Force One 1, Nike Dunk, Air Max, Bathing Ape, Bape Sta, Adidas"><link rel="stylesheet" type="text/css" href="css-base.css"><link rel="stylesheet" type="text/css" href="css-element.css"><link rel="stylesheet" type="text/css" href="css-contents.css"><link rel="stylesheet" type="text/css" href="css-edits.css"></head><body class="vertical" id="maintype">Nike Air Jordan, Nike Air Force One, Nike Dunk, Nike Air Max, Shox, Bathing Ape Bapes Bape Sta, Adidas Shoes, Diesel, Evisu, Red Monkey<div id="container"><div id="header"><ul id="nav-general"><li><a href="index.html">home</a></li><li><a href="info.html">About Us</a></li><li><a href="privacypolicy.html">Privacy Policy</a></li><li><a href="mailto:sales@stylecraze.com">Contact Us</a></li><li><a href="ind.html">site map</a></li><li><a href="https://order.store.yahoo.net/cgi-bin/wg-order?yhst-91142502824330">View Cart</a></li></ul><br class="clear"><h3 id="brandmark"><a href="index.html" title=""></a></h3></div><form method="GET" action="http://search.store.yahoo.com/cgi-bin/nsearch" name="searcharea" id="searcharea"><fieldset><label class="labelfield" for="searchfield"><span>Search</span><input name="query" type="text" id="query"></label><label class="buttonlabel" for="searchsubmit"><input name="searchsubmit" type="submit" value="Go" class="ys_primary" id="searchsubmit"><input name="vwcatalog" type="hidden" value="yhst-91142502824330"></label></fieldset><input type="hidden" name=".autodone" value="http://www.stylecraze.com/privacypolicy.html"></form><div id="bodyshell"><div id="bodycontent"><div id="introtext">For Sale Items Now Available!</div><div id="info-div"><i>This site is hosted by Yahoo! Store. Yahoo! hosts the store pages, ordering
 system, and order data. Yahoo! automatically collects order information but
 may only use this information in the aggregate. If you accessed this store
 through Yahoo! Shopping, Yahoo! also automatically collects information
@@ -70,16 +70,36 @@ StyleCraze reserves the right occasionally to make changes to its privacy policy
 </td>
   </tr>
 </tbody></table></div></div><div id="nav-product"><ul><li><a href="newarrivals.html" title="New Arrivals">New Arrivals</a></li><li><a href="niairjosh.html" title="Nike Air Jordans">Nike Air Jordans</a></li><li><a href="niairfoone1.html" title="Nike Air Force One">Nike Air Force One</a></li><li><a href="nidusbdu.html" title="Nike Dunks">Nike Dunks</a></li><li><a href="nikeairmax.html" title="Nike Air Max">Nike Air Max</a></li><li><a href="nikeshox.html" title="Nike Shox">Nike Shox</a></li><li><a href="baapeba.html" title="Bathing Ape Bapes">Bathing Ape Bapes</a></li><li><a href="adidasshoes.html" title="Adidas Shoes">Adidas Shoes</a></li><li><a href="dieselshoes.html" title="Diesel Shoes">Diesel Shoes</a></li><li><a href="swho.html" title="Sweaters / Hoodies">Sweaters / Hoodies</a></li><li><a href="designerjeans.html" title="Designer Jeans">Designer Jeans</a></li><li><a href="evisu.html" title="Evisu">Evisu</a></li><li><a href="saleitems.html" title="SALE ITEMS!">SALE ITEMS!</a></li></ul><div id="htmlbottom"><img src="http://site.stylecraze.com/credit-card.gif" width="124" height="158"></div></div></div><div id="footer"><span id="footer-links"><a href="index.html">home</a> | <a href="info.html">About Us</a> | <a href="privacypolicy.html">Privacy Policy</a> | <a href="mailto:sales@stylecraze.com">Contact Us</a> | <a href="ind.html">site map</a> | <a href="https://order.store.yahoo.net/cgi-bin/wg-order?yhst-91142502824330">View Cart</a></span><span id="copyright">Copyright © 2007 StyleCraze.Com All Rights Reserved.</span></div></div>
+<script type="text/javascript">
+// Begin Y! Store Generated Code
+ </script><script type="text/javascript" src="http://us.js2.yimg.com/us.js.yimg.com/ult/ylc_1.9.js"></script><script type="text/javascript" src="http://us.js2.yimg.com/us.yimg.com/lib/smbiz/store/csell/js/beacon-1.2.2.7.js">
+</script>
+<script type="text/javascript">
+// Begin Y! Store Generated Code
+ csell_page_data = {}; csell_page_rec_data = []; ts='TOK_STORE_ID';
+</script>
+<script type="text/javascript">
+// Begin Y! Store Generated Code
+function csell_GLOBAL_INIT_TAG() { var csell_token_map = {}; csell_token_map['TOK_ITEM_ID_LIST'] = 'privacypolicy'; csell_token_map['TOK_BEACON_TYPE'] = 'prod'; csell_token_map['TOK_RAND_KEY'] = 't'; csell_token_map['TOK_SPACEID'] = '2022276099'; csell_token_map['TOK_IS_ORDERABLE'] = '2'; csell_token_map['TOK_STORE_ID'] = 'yhst-91142502824330'; csell_token_map['TOK_URL'] = 'http://geo.yahoo.com'; csell_token_map['TOK_ORDER_HOST'] = 'order.store.yahoo.net';  c = csell_page_data; var t = csell_token_map; c['s'] = t['TOK_SPACEID']; c['url'] = t['TOK_URL']; c['si'] = t[ts]; c['ii'] = t['TOK_ITEM_ID_LIST']; c['bt'] = t['TOK_BEACON_TYPE']; c['rnd'] = t['TOK_RAND_KEY']; c['io'] = t['TOK_IS_ORDERABLE']; YStore.addItemUrl = 'http%s://'+t['TOK_ORDER_HOST']+'/ymix/MetaController.html?eventName.addEvent&cartDS.shoppingcart_ROW0_m_orderItemVector_ROW0_m_itemId=%s&cartDS.shoppingcart_ROW0_m_orderItemVector_ROW0_m_quantity=1&ysco_key_cs_item=1&sectionId=ysco.cart&ysco_key_store_id='+t[ts]; } 
+</script>
+<script type="text/javascript">
+// Begin Y! Store Generated Code
+function csell_REC_VIEW_TAG() {  var p = csell_page_data; var a = '/sid='+p['si']+'/io='+p['io']+'/ii='+p['ii']+'/bt='+p['bt']+'-view'; var r=Math.random(); YStore.CrossSellBeacon.renderBeaconWithRecData(p['url']+'/p/s='+p['s']+'/'+p['rnd']+'='+r+a); } 
+</script>
+<script type="text/javascript">
+// Begin Y! Store Generated Code
+var csell_token_map = {}; csell_token_map['TOK_PAGE'] = 'p'; csell_token_map['TOK_WS_URL'] = ''; csell_token_map['TOK_SHOW_CS_RECS'] = 'false'; csell_token_map['TOK_CURR_SYM'] = '$';  var t = csell_token_map; csell_GLOBAL_INIT_TAG(); YStore.page = t['TOK_PAGE']; YStore.currencySymbol = t['TOK_CURR_SYM']; YStore.crossSellUrl = t['TOK_WS_URL']; YStore.showCSRecs = t['TOK_SHOW_CS_RECS'];</script><script type="text/javascript" src="http://us.js2.yimg.com/us.yimg.com/lib/smbiz/store/csell/js/recs-1.1.2.28.js"></script><script type="text/javascript">
+</script>
 <script language="javascript"> 
  <!-- 
  if (document.referrer && (document.referrer!='') && window.Image) 
  { 
- (new Image).src="http://redirect1.vip.store.yahoo.com/cgi-bin/referadd?spcl=1&et=465f95d1&catalog=yhst-91142502824330&r=" + escape(document.referrer) + "&v=1"; }
+ (new Image).src="http://redirect1.vip.store.yahoo.com/cgi-bin/referadd?spcl=1&et=47787602&catalog=yhst-91142502824330&r=" + escape(document.referrer) + "&v=1"; }
  // --> 
  </script><script language="javascript"> 
  <!-- 
  if (document.referrer && (document.referrer!='') && window.Image) 
  { 
- (new Image).src="http://redirect1.vip.store.yahoo.net/cgi-bin/referadd?spcl=1&et=465f95d1&catalog=yhst-91142502824330&r=" + escape(document.referrer) + "&v=3"; }
+ (new Image).src="http://redirect1.vip.store.yahoo.net/cgi-bin/referadd?spcl=1&et=47787602&catalog=yhst-91142502824330&r=" + escape(document.referrer) + "&v=3"; }
  // --> 
  </script></body></html>
