--- a/f/fa/fam/familyassist.gov.au.html
+++ b/f/fa/fam/familyassist.gov.au.html
@@ -1,8 +1,8 @@
-<!--The following is the downloaded HTML source of the familyassist.gov.au privacy policy that was archived on 2007-06-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070626115339id_/http%3A//www.familyassist.gov.au/Internet/FAO/fao1.nsf/content/about_us-privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the familyassist.gov.au privacy policy that was archived on 2007-12-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071231053227id_/http%3A//www.familyassist.gov.au/Internet/FAO/fao1.nsf/content/about_us-privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
-<base href="http://www.familyassist.gov.au/internet/FAO/fao1.nsf/content/">
+<base href="http://www.familyassist.gov.au/internet/fao/fao1.nsf/content/">
 <script language="JavaScript" type="text/javascript">
 function MM_findObj(n, d) { //v4.01
   var p,i,x;  if(!d) d=document; if((p=n.indexOf("?"))>0&&parent.frames.length) {
@@ -31,7 +31,7 @@ function MM_setTextOfTextfield(objName,x,newText) { //v3.0
 <meta name="DC.Language" scheme="RFC3066" content="en-au">
 <meta name="AGLS.Function" scheme="AGIFT" content="Financial assistance">
 <meta name="DC.Date.created" scheme="ISO8601" content="2004-6-30">
-<meta name="DC.Date.modified" scheme="ISO8601" content="2007-4-4">
+<meta name="DC.Date.modified" scheme="ISO8601" content="2007-12-14">
 <meta name="DC.Type.aggregationLevel" content="item">
 <meta name="DC.Type.category" content="document">
 <meta name="DC.Type.Type" content="guidelines">
@@ -78,9 +78,9 @@ function MM_setTextOfTextfield(objName,x,newText) { //v3.0
 <h1>Your privacy</h1>
 <a name="content"></a><div id="anchors"><ul><li><a href="about_us-privacy.htm#1">Site Visit Data</a></li> <li><a href="about_us-privacy.htm#2">Collection of Personal Information</a></li> <li><a href="about_us-privacy.htm#3">Security of Information</a></li> <li><a href="about_us-privacy.htm#4">Contact Details</a></li></ul></div>
 
-<p>This site is maintained and hosted by the Australian Government Department of Families, Community Services and Indigenous Affairs on behalf of the Family Assistance Office. In accordance with the Guidelines for Federal and ACT Government World Wide Websites issued by the Australian Privacy Commissioner, the Department of Families, Community Services and Indigenous Affairs (FaCSIA) provides the following privacy statements. <br>
+<p>This site is maintained and hosted by the Australian Government Department of Families, Housing, Community Services and Indigenous Affairs on behalf of the Family Assistance Office. In accordance with the Guidelines for Federal and ACT Government World Wide Websites issued by the Australian Privacy Commissioner, the Department of Families, Housing, Community Services and Indigenous Affairs (FaHCSIA) provides the following privacy statements. <br>
 <br>
-<a name="1"></a></p><h2>Site Visit Data</h2>This is a cookie-free site operated by FaCSIA through an external service provider.<br>
+<a name="1"></a></p><h2>Site Visit Data</h2>This is a cookie-free site operated by FaHCSIA through an external service provider.<br>
 <br>
 Whenever you visit this website, our Internet service provider makes a record of your visit and logs the following information for statistical purposes:<br>
 <ul><li>your server address</li><li>your top level domain name (for example .com, .gov, .au, .uk etc)</li><li>the date and time of your visit to the site</li><li>the pages you accessed and documents downloaded</li><li>the previous site you have visited and</li><li>the type of browser you are using</li></ul>This information does not identify you personally and you remain anonymous. Analysis of this information assists with the improvement of this site.<br>
@@ -97,13 +97,13 @@ When completing the site's feedback forms, we request your name, e-mail address,
 <br>
 <a name="3"></a><h2><b>Security of Information</b></h2>Your personal information is protected under the confidentiality provisions contained within social security and family assistance law. These laws prohibit any person from accessing, using or disclosing any personal information in the possession of the Family Assistance Office except when performing their duties in accordance with these laws or in specific situations permitted by the law. Your personal information will not be made available to any person or agency unless the law permits or your permission is given. Penalties apply to those who fail to observe these provisions.<br>
 <br>
-Before you consider transmitting any confidential information over the Internet, you should first <a href="about_us-contact">contact us</a> to seek its agreement to the application of the 'confidential' classification to he information you wish to provide. When FaCSIA agrees to treat your personal information as 'confidential' it will receive the appropriate level of security.<br>
+Before you consider transmitting any confidential information over the Internet, you should first <a href="about_us-contact">contact us</a> to seek its agreement to the application of the 'confidential' classification to he information you wish to provide. When FaHCSIA agrees to treat your personal information as 'confidential' it will receive the appropriate level of security.<br>
 <br>
-While FaCSIA endeavours to provide a secure Internet environment, please note that the privacy of your personal information cannot be guaranteed if you choose to transmit that information over the Internet.<br>
+While FaHCSIA endeavours to provide a secure Internet environment, please note that the privacy of your personal information cannot be guaranteed if you choose to transmit that information over the Internet.<br>
 <br>
-If you do not wish to contact FaCSIA via the Internet, FaCSIA provides alternative ways to obtain and provide information. Please contact FaCSIA by telephone or post if you have concerns about the security of your email message. When you telephone the department, you can request access to FaCSIA facsimile numbers.<br>
+If you do not wish to contact FaHCSIA via the Internet, FaHCSIA provides alternative ways to obtain and provide information. Please contact FaHCSIA by telephone or post if you have concerns about the security of your email message. When you telephone the department, you can request access to FaHCSIA facsimile numbers.<br>
 <br>
-<a name="4"></a><h2><b>Contact Details</b></h2>Department of Families, Community Services and Indigenous Affairs<br>
+<a name="4"></a><h2><b>Contact Details</b></h2>Department of Families, Housing, Community Services and Indigenous Affairs<br>
 Box 7788<br>
 Canberra Mail Centre ACT 2610<br>
 Telephone: 1300 653 227<br>
@@ -136,7 +136,7 @@ Telephone: 1300 653 227<br>
 <a href="about_us-privacy.htm">Privacy&nbsp;policy</a> | 
 <a href="about_us-contact">Contact&nbsp;us</a> | 
 <br>
-<a href="about_us-copyright.htm">©&nbsp;Copyright</a> Family&nbsp;Assistance&nbsp;Office&nbsp;2004 | This page last modified&nbsp;04/04/2007.</div>
+<a href="about_us-copyright.htm">©&nbsp;Copyright</a> Family&nbsp;Assistance&nbsp;Office&nbsp;2004 | This page last modified&nbsp;14/12/2007.</div>
 <!-- End Footer -->
 <p>
 
